--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,35 @@
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(../images/Banner.png);
+    width: 1440px;
+    min-height: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:cover;
+}
 .container{
     margin:0 auto;
     width: 1200px;
 }
-.header_holder{
+.transparent_header{
     width: 1160px;
     height: 104px;
     opacity: 0.7;
     background: var(--0-a-0-a-0-a, #0A0A0A);
     backdrop-filter: blur(25px);
+    padding-left: 36px;
+    padding-right: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header_holder {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header_left{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -36,27 +58,29 @@
     font-style: normal;
     font-weight: 800;
     line-height: normal;
+    padding-left: 36px;
 }
 .header_right{
    display: flex; 
-
+   width: 90px;
+   justify-content: space-between;
 }
-.header_right a{
+.one a{
     display: block;
-}
-.header_right:first-child{
+    width: 32px;
+    min-height: 32px;
     background-image: url(../images/Search.png);
-    width: 32px;
-    min-height: 32px;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size:cover;
 }
-.header_right:last-child{
-    background-image: url(../images/Buy.png);
+
+.two a{
+    display: block;
     width: 32px;
     min-height: 32px;
+    background-image: url(../images/Buy.png); 
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size:cover;
 }
